--- a/static/css/cards.css
+++ b/static/css/cards.css
@@ -1,9 +1,11 @@
 .card__wrapper {
-    justify-content: center;
+    max-width: 1100px;
+    margin: 0 auto;
     align-items: center;
+    justify-content: center ;
     display: flex;
+    flex-wrap: wrap;
     gap: 20px;
-    text-align: center;
 }
 
 .card {
